<resources>
    <string name="app_name">SportsBingoApp</string>
    <string name="about1">Because our goal is to provide factual information on safe methods to gamble online to our users, many of the links on betandbeat.com are affiliate links, which allows us to be more sustainable.
That means, if you click over, sign up, or make a deposit, we may receive a commission. Obviously, this has no bearing on your bonus terms.
Commissions have no bearing on our editorial decisions or the ratings we provide to online sportsbooks and casino operators.
</string>
    <string name="about2">One of the best aspects of bingo is the sense of camaraderie. Land-based bingo halls are busy with people, creating a warm and pleasant community where the same people frequently congregate on the same days and connections grow through decades.
Bingo is a straightforward game. To win the jackpot, you must be the first player to mark off all of the numbers on your card. While this is true for practically every bingo game, there are minor differences across the various types.</string>

    <string name="about3">They evolved throughout time, and by the early twentieth century, numerous numbers were also being called with slang names and specialized calls, which would forever change the game. By the 1950s, and then again during the peak years of the 1960s and 1980s, bingo calls had become an integral element of bingo play, and while they are not called in the same way on online bingo sites, many individuals in the chat rooms still yell them out as if they were in their local bingo hall.</string>

    <string name="title1_con">Most individuals know how to play bingo or are at least aware of how the odds of winning bingo work. After all, it is one of the most popular games, not only as a gambling game, but also as a social game among friends, family, and people from all walks of life. With the rise of online casinos and gaming, online bingo is becoming increasingly popular among online gamblers. Bingo has historically provided significant payments, particularly with modern progressive jackpots.</string>
    <string name="title2_con">Bingo is a skill-based game in several ways. To win, you must have certain skills, such as an excellent sense of hearing. You must be able to hear the numbers that the host calls out. You must be able to concentrate for hours on end without missing a call. Because of this, most Bingo players choose to sit near a speaker or sound system, or in front of a stage or host table. You must concentrate and focus your entire attention on your cards. The more cards you play, the more important it is to pay attention to the numbers called. Typically, the host will yell out numbers, and an aide will write the number on a board.</string>
    <string name="title3_con">Winning money at both land-based and online bingo is a distinct possibility. But how much money can you win playing online bingo? Bingo is a casual and social gambling game that awards cash rewards to those who successfully finish their tickets. Can the prizes at these bingo venues be large enough to warrant your time? Let us respond by learning how bingo payments are computed as well as the greatest payouts of all time. Ticket sales provide the majority of the prizes for practically every bingo facility. The majority of these places will take 50 to 60 percent of their earnings from ticket sales and convert it into total cash payout.</string>
    <string name="title4_con">Yes! You can win anything from a few dollars to the ultimate prize. Still, the house is the sure winner in this game, as it is in any other. You should also look into the cash prize before participating because it is pointless to spend money on Bingo tickets that have a low chance of winning. Once you have set your sights on the prize, you can always adjust your tactics and even choose to scream line if the price is low enough. If not, you can make better-informed judgments in order to come out ahead, or at least have a greater chance of doing so.</string>
    <string name="title5_con">Bingo is an underappreciated gambling game that can improve your thinking more than many other games. Special bingo variations have demonstrated improved comprehension of complicated concepts. While not as fast-paced or visually engaging as its counterpart, bingo offers advantages that you are certain to like. In this essay, we will discuss the cognitive and recreational benefits of bingo. How is bingo better than poker, blackjack, or craps in stimulating your brain than any other casino game? As you play bingo, your mind is heavily involved, which improves your short-term memory and focus.</string>
    <string name="title6_con">Bingo halls are a better option than online bingo sites since you can experience the ambiance and buzz of a real bingo game, as well as actual randomness rather than artificial algorithms. When it comes to payouts and player experience, brick-and-mortar bingo halls have an advantage over internet bingo halls. To help you get the most out of your bingo hall visit, here are some strategies for increasing your chances of doubling your original bankroll. Even though knowledgeable people are still discussing whether bingo is a game of chance or skill, there is a science to the bingo craziness.</string>
    <string name="title7_con">Bingo is a fun game that is often played at charity events and social gatherings. Your luck in getting a good card, rather than your skill, is the key to winning. Bingo is a terrific pastime for those who enjoy the excitement of winning by chance. People also enjoy watching games unfold and anticipating how they will end. Players compete to be the first to finish a specific pattern. To indicate that he has finished a pattern, a player screams "Bingo!" A game may have more than one winner, and the final winner is usually determined by pulling numbers from a cage. The game is won by the one who gets the highest number.</string>
    <string name="title8_con">Bingo is a game of chance in which you place money on a Bingo card. You can choose your cards at some Bingo establishments or events, thus you are relying on luck. When playing Bingo, having two, four, or more cards increases your chances of winning. This is why some Bingo players buy a large number of cards and spread them out on a table. However, if you are a beginner, it is not a good idea because you can lose track of your cards. If you have too many cards to check, you wont be able to play well!</string>

    <string name="tip1">How do the odds work in an online bingo game? Depending on how you look at things on the field, there are usually two ways to determine your odds in a bingo game. Here are some things you should know about bingo odds.</string>
    <string name="tip2">Playing online bingo is similar like purchasing a raffle ticket. When you purchase one ticket, your chances of winning are one in X number of tickets in the draw. When you buy ten tickets, you receive ten chances to win; the more tickets you have, the better your odds of winning. The same is true in a game of line bingo.
Typically, an online bingo game will inform you of the number of people participating in a given round. Each card purchased equals one chance to win. So, in a group of ten players, if everyone buys one card, everyone had a 1/10 chance of winning. If you buy ten cards while the others only buy one, you now have a 10 out of 20 chance of winning.</string>
    <string name="tip3">In the same way that the number of cards at play in an online bingo game may be used to determine your odds of winning, the number of players in the game can also be used to determine your odds of winning.
There are more cards in play when there are more players in the game room. Given a 1:1 ratio, there should be at least 20 cards on the table for every 20 participants. You just need to buy more cards than most players if you want to improve your chances of winning.
In the opposite direction, fewer players in the gaming room means you have a better chance of winning, especially if you have more cards than the other players.</string>
    <string name="tip4">Your odds will also fluctuate depending on the type of bingo you play. A 90-ball bingo game has 90 drawings, while a 75-ball game has 75 calls. In a nutshell, your chances of winning grow as there are less balls left to draw; hence, fewer balls in the game give you greater odds. As a result, your chances of winning in the 10th draw are smaller than your chances of winning in the 40th or even 50th draw.</string>
    <string name="tip5">Tippetts Bingo System -
this bingo variant is named after the famous English statistician Leonard Henry Caleb Tippett, also known professionally as L.H C. Tippett. Tippet postulated that the longer a bingo game is played, the more likely it is that the balls called will be closer to the median number. This is the number 38 in a 75-ball game and the number 45 in a 90-ball game. In contrast, the shorter the game, the more likely it is that the numbers on either end of the spectrum will be called.</string>
    <string name="tip6">Granvilles Bingo System -
this approach was created by Joseph E. Granville, a mathematician famed for his investing predictions. While the Tippet System is primarily concerned with game duration, Granvilles technique is more concerned with achieving systematic and asymmetric numbers on the card.
This means that there should be a balance of odd and even numbers, a balance of high and low numbers, a balance of numbers ending in 1, 2, 3, and 4, and so on. The problem is that Granville contends that with the concept of probability, it is merely assumed that in the long term, there would be an equal number of odd and even numbers, highs and lows, and other factors.</string>
    <string name="tip7">Losses should not be pursued -
every day is not a good day. If you are in a losing streak, give yourself a break and stop chasing your losses. Some players believe that a "due" will come in and that all of their losses will be recovered in a single great triumph. While this is theoretically feasible, it is extremely improbable to occur.</string>
    <string name="tip8">Make the Most of Your Bingo Cards -
as previously said, the primary premise behind bingo is that the more cards you have in your possession, the better your chances of winning. As a result, do not settle for just one or two cards and hope to win the jackpot. While that is conceivable, if you truly want to win large, you should max out your bingo cards.</string>
    <string name="tip9">When There Are Fewer People, Play -
there are numerous benefits to playing online bingo with a small group of individuals. When there are fewer people, your chances of winning with a single card are substantially higher. Consider a group of ten people; the odds of everyone having one card are only one in ten. What if you have just five persons and purchased ten cards? That is a probability of 10/15!</string>
    <string name="tip10">Look for Bingo Specials -
this is nearly always the case for any online gambling game, not only bingo. Most online casino applications or gambling websites offer promos aimed at luring new players or keeping existing ones on their platform. Make the most of these incentives by utilizing them to the best extent possible.
Bingo is a fun game, and when played with others, it can also be a terrific way to socialize! Use the suggestions and strategies in this book to make bingo not only more pleasant but also more profitable!</string>
</resources>