<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".AboutPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/customborder2"
        android:scaleType="fitXY"
        android:src="@drawable/banner2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ABOUT SPORTS BINGO 365"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="#BAFA00"
        android:textSize="23dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/abt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about1"
            android:layout_marginTop="15dp"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/abt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about2"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@+id/abt"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/abt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about3"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@+id/abt2"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textStyle="italic"/>

    <Button
        android:id="@+id/btn02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#66FF04"
        android:text="BACK"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/abt3"/>

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>